<resources>

    //En este archivo almaceno las strings que uso en mi app

    <string name="app_name">CalculadoraA</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="ACbutton">AC</string>
    <string name="parentesisbutton">()</string>
    <string name="comabutton">,</string>
    <string name="sumabutton">+</string>
    <string name="restabutton">-</string>
    <string name="multiplicacionbutton">×</string>
    <string name="divisionbutton">÷</string>
    <string name="resultadobutton">=</string>
    <string name="potenciabutton">^</string>
    <string name="input">Introduce un valor</string>
</resources>